@@ -46,7 +46,7 @@ version = releaseVersion
 // the version of hadoop used for compiling and testing
 ext.hadoopVersion = "1.2.1"
 
-ext.cascadingVersion = '2.5.2'
+ext.cascadingVersion = '2.5.3'
 ext.lingualVersion = '1.0.1'
 
 allprojects {
@@ -57,8 +57,8 @@ allprojects {
   repositories {
     mavenLocal()
     mavenCentral()
-    mavenRepo name: 'conjars', url: 'http://conjars.org/repo/'
-    mavenRepo name: 'pentaho', url: 'http://repo.pentaho.org/artifactory/repo/'
+    maven{ url 'http://conjars.org/repo/' }
+    maven{ url 'http://repo.pentaho.org/artifactory/repo/' }
   }
 
   apply plugin: 'java'
@@ -143,7 +143,7 @@ allprojects {
 
       pom.project {
         description 'Cascading JDBC is a collection of adapters for JDBC.'
-        inceptionYear '2014'
+        inceptionYear '2013'
         url 'http://cascading.org/'
         scm {
           url 'https://github.com/Cascading/cascading-jdbc.git'
