@@ -23,7 +23,7 @@ cascading.bind.provider.names=mysql
 cascading.bind.provider.mysql.platforms=hadoop,hadoop2-mr1
 
 # factory
-cascading.bind.provider.mysql.factory.classname=cascading.jdbc.JDBCFactory
+cascading.bind.provider.mysql.factory.classname=cascading.jdbc.MySqlFactory
 
 # protocol is jdbc
 cascading.bind.provider.mysql.protocol.names=jdbc
@@ -51,4 +51,5 @@ cascading.bind.provider.mysql.format.mysql.updateBy=
 cascading.bind.provider.mysql.format.mysql.tableAlias=
 cascading.bind.provider.mysql.format.mysql.selectquery=
 cascading.bind.provider.mysql.format.mysql.countquery=
+cascading.bind.provider.mysql.format.mysql.replaceoninsert=false
 
