@@ -1,7 +1,9 @@
 Cascading-jdbc Change Log
+
 2.5.2 (unreleased)
 - upgrade redshift jdbc driver to 8.4-702.jdbc4
 - reduce size of test jars
+- replaceOnInsert support for MySQL
 
 2.5.1
 - update to cascading 2.5.2
